--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,19 +1,5 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "/app.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/app.js",
-            "methods":["GET","POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-            "headers":{
-                "Access-Control-Allow-Origin": "*"
-            }
-        }
-    ]
+    "builds": [{ "src": "./index.js", "use": "@vercel/node"}],
+    "routes": [{ "src": "/(.*)", "dest": "/"}]
 }
