--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -5,6 +5,6 @@
     "src": "/(.*)", 
     "dest": "/index.js", 
     "methods": ["GET", "POST", "DELETE", "PATCH", "OPTIONS"],
-    "headers": {"Access-Control-Allow-Origin": "https://front-back-both-client.vercel.app/"}
+    "headers": {"Access-Control-Allow-Origin": "https://front-back-both-client.vercel.app"}
   }]
 }
