--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,10 +1,24 @@
 {
   "version": 2,
   "builds": [{ "src": "./index.js", "use": "@vercel/node"}],
-  "routes": [{ 
-    "src": "/(.*)", 
-    "dest": "/index.js", 
-    "methods": ["GET", "POST", "DELETE", "PATCH", "OPTIONS"],
-    "headers": {"Access-Control-Allow-Origin": "https://front-back-both-client.vercel.app"}
-  }]
+  "routes": [
+    { 
+      "src": "/(.*)", 
+      "dest": "/index.js", 
+      "methods": ["GET", "POST", "DELETE", "PATCH", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "https://front-back-both-client.vercel.app"
+      }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.js",
+      "methods": ["OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "https://front-back-both-client.vercel.app",
+        "Access-Control-Allow-Methods": "GET, POST, DELETE, PATCH, OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type"
+      }
+    }
+  ]
 }
